Map page no longer overflows. Toolbox and display boxes redesigned. Fixed dropbox on navbar being overlapped.

--- a/apps/frontend/src/index.css
+++ b/apps/frontend/src/index.css
@@ -364,8 +364,6 @@ body.dark .DragDropBox {
 .BFSBox {
     align-items: center;
     text-align: center;
-    height: 100vh;
-    overflow: hidden;
 }
 
 .mapNames {
@@ -484,6 +482,12 @@ body.dark .react-transform-wrapper image {
 
 
 /* ====== Side Bar ======= */
+.transform-component-module_wrapper__SPB86 {
+    height: 100vh!important;
+}
+body.dark .tools {
+    background-color: rgba(161, 161, 161, 0.3);
+}
 .sidebar {
     transition: transform 0.3s ease;
 }
@@ -498,7 +502,7 @@ input[type="radio"]:checked + label {
 }
 input[type="checkbox"]:checked + label > img, input[type="checkbox"]:hover + label > img {
     border: 2px solid rgb(59 130 246);
-    border-radius: 12px;
+    border-radius: 10px;
     transform: scale(0.9);
 }
 input[type="checkbox"]:checked + label, input[type="checkbox"]:hover + label {
